# imctrans

./: .gitignore  README.md  setup.py
imctrans/: cli.py
imctrans/cpp/: blob.py  code.py  tests.py  utils.py
imctrans/cpp/assets/: CMakeLists.txt
imctrans/cpp/assets/src/IMC/Base/: Factory.cpp  Message.hpp  Platform.hpp
imctrans/cpp/assets/tests/: test_Blob.cpp  test_ByteBuffer.cpp  test_ByteCopy.cpp  test_CRC16.cpp  test_Constants.cpp  test_Exceptions.cpp  test_Factory.cpp  test_InlineMessage.cpp  test_Messages_All.cpp  test_Packet.cpp  test_Parser.cpp  test_Serialization.cpp
imctrans/rust/: base.py  blob.py  code.py  utils.py
